@@ -61,10 +61,9 @@ JsVar *jswrap_dataview_constructor(JsVar *buffer, int byteOffset, int byteLength
   JsVar *dataview = jspNewObject(0,"DataView");
   if (dataview) {
     jsvObjectSetChild(dataview, "buffer", buffer);
-    if (byteOffset)
-      jsvObjectSetChildAndUnLock(dataview, "byteOffset", jsvNewFromInteger(byteOffset));
-    if (byteLength)
-      jsvObjectSetChildAndUnLock(dataview, "byteLength", jsvNewFromInteger(byteLength));
+    jsvObjectSetChildAndUnLock(dataview, "byteOffset", jsvNewFromInteger(byteOffset));
+    jsvObjectSetChildAndUnLock(dataview, "byteLength", jsvNewFromInteger(
+        byteLength?byteLength:jsvGetArrayBufferLength(buffer)));
   }
   return dataview;
 }
